Fix build when the examples are not built on the machine.
It's kind of tricky
- the parent file is installed using install-file
- the examples-utils project is built (clean install)
- then the core-examples is built.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 **/core-examples/pom.xml
 **/core-examples/README.adoc
 **/core-examples/src
+**/examples-utils
 **/src/it/pom.xml
 target/
 pom.xml.tag
