--- a/vertx-core-examples-it/pom.xml
+++ b/vertx-core-examples-it/pom.xml
@@ -10,50 +10,14 @@
     <version>3.1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>vertx-examples-it</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
-
-  <properties>
-    <vertx.version>3.0.0</vertx.version>
-    <vertx.examples.branch>master</vertx.examples.branch>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-stack-dist</artifactId>
-      <version>${vertx.version}</version>
-      <classifier>full</classifier>
-      <type>zip</type>
-      <scope>provided</scope>
-      <exclusions>
-        <!-- Explicitely exclude groovy to avoid the conflict with the script execution -->
-        <exclusion>
-          <groupId>org.codehaus.groovy</groupId>
-          <artifactId>groovy-all</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>3.1.0</version>
-    </dependency>
-    <dependency>
-      <artifactId>http-builder</artifactId>
-      <groupId>org.codehaus.groovy.modules.http-builder</groupId>
-      <version>0.7.1</version>
-    </dependency>
-  </dependencies>
+  <artifactId>vertx-core-examples-it</artifactId>
 
   <build>
     <plugins>
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>${project.version}</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
@@ -129,6 +93,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <artifactId>maven-invoker-plugin</artifactId>
         <version>1.10</version>
