Automate the redis and service proxy examples

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-**/*-examples/pom.xml
-**/*-examples/README.adoc
-**/*-examples/src/main/java
-**/*-examples/src/main/groovy
-**/*-examples/src/main/js
-**/*-examples/src/main/rb
-**/*-examples/src/main/resources
+**/*-examples/**/pom.xml
+**/*-examples/**/README.adoc
+**/*-examples/**/src/main/java
+**/*-examples/**/src/main/groovy
+**/*-examples/**/src/main/js
+**/*-examples/**/src/main/rb
+**/*-examples/**/src/main/resources
+**/*-examples/**/src/main/generated
 **/maven-simplest/src
 **/maven-simplest/pom.xml
 **/maven-verticles/**/src
