--- a/vertx-web-examples-it/pom.xml
+++ b/vertx-web-examples-it/pom.xml
@@ -17,6 +17,17 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/it</directory>
+        <includes>
+          <include>**/*.json</include>
+          <include>**/*-check.groovy</include>
+        </includes>
+        <filtering>true</filtering>
+        <targetPath>${project.build.directory}/it</targetPath>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>com.github.klieber</groupId>
@@ -75,6 +86,62 @@
                 <dependencies>${project.build.directory}/dependencies</dependencies>
                 <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
               </additionalProperties>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+        <version>0.0.24</version>
+        <executions>
+          <execution>
+            <id>install node and npm</id>
+            <goals>
+              <goal>install-node-and-npm</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <nodeVersion>v0.10.18</nodeVersion>
+              <npmVersion>1.3.8</npmVersion>
+              <installDirectory>${project.build.directory}</installDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>install-bower</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <workingDirectory>${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/vertxbus/amd/webroot</workingDirectory>
+              <arguments>install</arguments>
+              <installDirectory>${project.build.directory}</installDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>resolve-amd</id>
+            <goals>
+              <goal>bower</goal>
+            </goals>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <workingDirectory>${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/vertxbus/amd/webroot</workingDirectory>
+              <arguments>install</arguments>
+              <installDirectory>${project.build.directory}</installDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>resolve-commonjs</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <workingDirectory>${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/vertxbus/commonjs/webroot</workingDirectory>
+              <arguments>install</arguments>
+              <installDirectory>${project.build.directory}</installDirectory>
             </configuration>
           </execution>
         </executions>
