Update to 3.1.0-SNAPSHOT version of vert.x and related projects.

--- a/vertx-service-proxy-examples-it/pom.xml
+++ b/vertx-service-proxy-examples-it/pom.xml
@@ -58,6 +58,7 @@
               <additionalProperties>
                 <base>${project.build.directory}/it/${example.dir}</base>
                 <dependencies>${project.build.directory}/dependencies</dependencies>
+                <version>${project.version}</version>
               </additionalProperties>
             </configuration>
           </execution>
