--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.0.0</vertx.version>
-    <vertx.examples.branch>master</vertx.examples.branch>
+    <vertx.version>3.1.0-SNAPSHOT</vertx.version>
+    <vertx.examples.branch>3.1.0-SNAPSHOT</vertx.examples.branch>
   </properties>
 
   <modules>
