--- a/vertx-maven-examples-it/pom.xml
+++ b/vertx-maven-examples-it/pom.xml
@@ -58,7 +58,7 @@
                             <additionalProperties>
                                 <base>${project.build.directory}/it</base>
                                 <dependencies>${project.build.directory}/dependencies</dependencies>
-                                <version>3.0.0</version>
+                                <version>${project.version}</version>
                             </additionalProperties>
                         </configuration>
                     </execution>
