--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>vertx-service-proxy-examples-it</module>
     <module>vertx-jdbc-examples-it</module>
     <module>vertx-sync-examples-it</module>
+    <module>vertx-mongo-examples-it</module>
   </modules>
 
   <dependencies>
