--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>vertx-jdbc-examples-it</module>
     <module>vertx-sync-examples-it</module>
     <module>vertx-mongo-examples-it</module>
+    <module>vertx-maven-service-factory-examples-it</module>
   </modules>
 
   <dependencies>
