--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,12 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>oss-snapshots</id>
+      <name>oss-snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+  </repositories>
 </project>
