--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>integration-tests</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
+  <version>3.1.0</version>
 
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.1.0-SNAPSHOT</vertx.version>
-    <vertx.examples.branch>3.1.0-SNAPSHOT</vertx.examples.branch>
+    <vertx.version>3.1.0</vertx.version>
+    <vertx.examples.branch>master</vertx.examples.branch>
   </properties>
 
   <modules>
