--- a/vertx-integration-test-maven-plugin/pom.xml
+++ b/vertx-integration-test-maven-plugin/pom.xml
@@ -7,11 +7,10 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.0</version>
   </parent>
 
   <artifactId>vertx-integration-test-maven-plugin</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
 
   <packaging>maven-plugin</packaging>
 
