--- a/vertx-maven-service-factory-examples-it/pom.xml
+++ b/vertx-maven-service-factory-examples-it/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.vertx</groupId>
         <artifactId>integration-tests</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0</version>
     </parent>
 
     <artifactId>vertx-maven-service-factory-examples-it</artifactId>
@@ -22,7 +22,7 @@
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
