--- a/vertx-sync-examples-it/pom.xml
+++ b/vertx-sync-examples-it/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.0</version>
   </parent>
 
   <artifactId>vertx-sync-examples-it</artifactId>
@@ -34,7 +34,7 @@
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
@@ -70,6 +70,7 @@
               <additionalProperties>
                 <base>${project.build.directory}/it/${example.dir}</base>
                 <dependencies>${project.build.directory}/dependencies</dependencies>
+                <version>${vertx.version}</version>
               </additionalProperties>
             </configuration>
           </execution>
