--- a/vertx-web-examples-it/src/it/web-examples/pom.xml
+++ b/vertx-web-examples-it/src/it/web-examples/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>web-examples</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
+  <version>3.1.0</version>
 
   <dependencies>
 
@@ -143,12 +143,4 @@
       </plugins>
     </pluginManagement>
   </build>
-
-  <repositories>
-    <repository>
-      <id>oss-snapshots</id>
-      <name>oss-snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </repository>
-  </repositories>
 </project>
