--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>integration-tests</artifactId>
-  <version>3.1.0</version>
+  <version>3.2.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.1.0</vertx.version>
-    <vertx.examples.branch>master</vertx.examples.branch>
+    <vertx.version>3.2.0-SNAPSHOT</vertx.version>
+    <vertx.examples.branch>3.2.0-SNAPSHOT</vertx.examples.branch>
   </properties>
 
   <modules>
@@ -33,7 +33,7 @@
   <dependencies>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-stack-dist</artifactId>
+      <artifactId>vertx-stack-manager</artifactId>
       <version>${vertx.version}</version>
       <classifier>full</classifier>
       <type>zip</type>
