--- a/vertx-core-examples-it/pom.xml
+++ b/vertx-core-examples-it/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.1.0</version>
+    <version>3.2.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>vertx-core-examples-it</artifactId>
@@ -74,8 +74,8 @@
             </goals>
             <phase>process-resources</phase>
             <configuration>
-              <includeArtifactIds>vertx-stack-dist</includeArtifactIds>
-              <outputDirectory>${project.build.directory}</outputDirectory>
+              <includeArtifactIds>vertx-stack-manager</includeArtifactIds>
+              <outputDirectory>${project.build.directory}/vert.x-${vertx.version}</outputDirectory>
               <skip>${fastbuild}</skip>
             </configuration>
           </execution>
