--- a/vertx-mongo-examples-it/pom.xml
+++ b/vertx-mongo-examples-it/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.1.0</version>
+    <version>3.2.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>vertx-mongo-examples-it</artifactId>
@@ -22,7 +22,7 @@
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.0-SNAPSHOT</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
@@ -75,8 +75,8 @@
             </goals>
             <phase>process-resources</phase>
             <configuration>
-              <includeArtifactIds>vertx-stack-dist</includeArtifactIds>
-              <outputDirectory>${project.build.directory}</outputDirectory>
+              <includeArtifactIds>vertx-stack-manager</includeArtifactIds>
+              <outputDirectory>${project.build.directory}/vert.x-${vertx.version}</outputDirectory>
               <skip>${fastbuild}</skip>
             </configuration>
           </execution>
