--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.2.0-SNAPSHOT</vertx.version>
-    <vertx.examples.branch>3.2.0-SNAPSHOT</vertx.examples.branch>
+    <vertx.version>3.2.0</vertx.version>
+    <vertx.examples.branch>3.2.0-staging</vertx.examples.branch>
   </properties>
 
   <modules>
@@ -110,9 +110,14 @@
 
   <repositories>
     <repository>
-      <id>oss-snapshots</id>
-      <name>oss-snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <id>oss.snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/iovertx-2254/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
     </repository>
   </repositories>
 </project>
