--- a/vertx-maven-examples-it/pom.xml
+++ b/vertx-maven-examples-it/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <fastbuild>false</fastbuild>
+        <jar.version>3.2.0</jar.version>
     </properties>
 
     <build>
