--- a/vertx-service-proxy-examples-it/pom.xml
+++ b/vertx-service-proxy-examples-it/pom.xml
@@ -15,6 +15,7 @@
   <properties>
     <example.dir>service-proxy-examples</example.dir>
     <fastbuild>false</fastbuild>
+    <jar.version>3.2.0</jar.version>
   </properties>
 
   <build>
