--- a/vertx-web-examples-it/src/it/web-examples/pom.xml
+++ b/vertx-web-examples-it/src/it/web-examples/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>web-examples</artifactId>
-  <version>3.2.0</version>
+  <version>3.3.0-SNAPSHOT</version>
 
   <dependencies>
 
@@ -149,12 +149,12 @@
   <repositories>
     <repository>
       <id>oss.snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/iovertx-2254/</url>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </snapshots>
       <releases>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
       </releases>
     </repository>
   </repositories>
