--- a/vertx-maven-examples-it/pom.xml
+++ b/vertx-maven-examples-it/pom.xml
@@ -7,14 +7,14 @@
     <parent>
         <groupId>io.vertx</groupId>
         <artifactId>integration-tests</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>vertx-maven-examples-it</artifactId>
 
     <properties>
         <fastbuild>false</fastbuild>
-        <jar.version>3.2.0</jar.version>
+        <jar.version>${project.version}</jar.version>
     </properties>
 
     <build>
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-integration-test-maven-plugin</artifactId>
-                <version>3.2.0-SNAPSHOT</version>
+                <version>3.3.0-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>clone-vertx-examples</id>
@@ -53,13 +53,14 @@
                         </goals>
                         <phase>integration-test</phase>
                         <configuration>
-                            <vertxHome>${project.build.directory}/vert.x-${vertx.version}</vertxHome>
+                            <vertxHome>${project.build.directory}/vert.x-${vertx.version}/vertx</vertxHome>
                             <inputDirectory>${project.basedir}/src/it</inputDirectory>
                             <outputDirectory>${project.build.directory}/it</outputDirectory>
                             <additionalProperties>
                                 <base>${project.build.directory}/it</base>
                                 <dependencies>${project.build.directory}/dependencies</dependencies>
                                 <version>${project.version}</version>
+                                <jar.version>${project.version}</jar.version>
                             </additionalProperties>
                         </configuration>
                     </execution>
