--- a/vertx-maven-service-factory-examples-it/pom.xml
+++ b/vertx-maven-service-factory-examples-it/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.vertx</groupId>
         <artifactId>integration-tests</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>vertx-maven-service-factory-examples-it</artifactId>
@@ -15,7 +15,7 @@
   <properties>
     <example.dir>maven-service-factory-examples</example.dir>
     <fastbuild>false</fastbuild>
-    <jar.version>3.2.0</jar.version>
+    <jar.version>${project.version}</jar.version>
   </properties>
 
   <build>
@@ -23,7 +23,7 @@
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.3.0-SNAPSHOT</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
@@ -53,7 +53,7 @@
             </goals>
             <phase>integration-test</phase>
             <configuration>
-              <vertxHome>${project.build.directory}/vert.x-${vertx.version}</vertxHome>
+              <vertxHome>${project.build.directory}/vert.x-${vertx.version}/vertx</vertxHome>
               <inputDirectory>${project.basedir}/src/it</inputDirectory>
               <outputDirectory>${project.build.directory}/it</outputDirectory>
               <additionalProperties>
@@ -149,5 +149,5 @@
       </plugin>
     </plugins>
   </build>
-    
+
 </project>
