--- a/vertx-maven-examples-it/pom.xml
+++ b/vertx-maven-examples-it/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <fastbuild>false</fastbuild>
-        <jar.version>${project.version}</jar.version>
+        <jar.version>3.2.1</jar.version>
     </properties>
 
     <build>
@@ -60,7 +60,7 @@
                                 <base>${project.build.directory}/it</base>
                                 <dependencies>${project.build.directory}/dependencies</dependencies>
                                 <version>${project.version}</version>
-                                <jar.version>${project.version}</jar.version>
+                                <jar.version>3.2.1</jar.version>
                             </additionalProperties>
                         </configuration>
                     </execution>
