--- a/vertx-service-proxy-examples-it/pom.xml
+++ b/vertx-service-proxy-examples-it/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <example.dir>service-proxy-examples</example.dir>
     <fastbuild>false</fastbuild>
-    <jar.version>${project.version}</jar.version>
+    <jar.version>3.2.1</jar.version>
   </properties>
 
   <build>
