--- a/vertx-service-proxy-examples-it/pom.xml
+++ b/vertx-service-proxy-examples-it/pom.xml
@@ -21,6 +21,22 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.github.klieber</groupId>
+        <artifactId>phantomjs-maven-plugin</artifactId>
+        <version>0.7</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>install</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <version>1.9.8</version>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
         <version>3.3.0-SNAPSHOT</version>
@@ -60,6 +76,7 @@
                 <base>${project.build.directory}/it/${example.dir}</base>
                 <dependencies>${project.build.directory}/dependencies</dependencies>
                 <version>${project.version}</version>
+                <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
               </additionalProperties>
             </configuration>
           </execution>
