--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <module>vertx-sync-aot-examples-it</module>
     <module>vertx-mongo-examples-it</module>
     <module>vertx-maven-service-factory-examples-it</module>
+    <module>vertx-mail-examples-it</module>
   </modules>
 
   <dependencies>
@@ -50,7 +51,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.1.0</version>
+      <version>3.4.1</version>
     </dependency>
     <dependency>
       <artifactId>http-builder</artifactId>
@@ -60,22 +61,22 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.4</version>
+      <version>4.5.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
-      <version>4.3.6</version>
+      <version>4.5.2</version>
     </dependency>
     <dependency>
       <groupId>org.fluentlenium</groupId>
       <artifactId>fluentlenium-core</artifactId>
-      <version>0.10.3</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>org.fluentlenium</groupId>
       <artifactId>fluentlenium-assertj</artifactId>
-      <version>0.10.3</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>com.github.detro</groupId>
@@ -85,7 +86,7 @@
     <dependency>
       <groupId>com.jayway.restassured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>2.4.1</version>
+      <version>2.9.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.codehaus.groovy</groupId>
