--- a/vertx-web-examples-it/pom.xml
+++ b/vertx-web-examples-it/pom.xml
@@ -41,7 +41,7 @@
           </execution>
         </executions>
         <configuration>
-          <version>1.9.8</version>
+          <version>2.1.1</version>
         </configuration>
       </plugin>
 
@@ -94,7 +94,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>0.0.24</version>
+        <version>0.0.28</version>
         <executions>
           <execution>
             <id>install node and npm</id>
@@ -115,8 +115,38 @@
             </goals>
             <phase>pre-integration-test</phase>
             <configuration>
-              <workingDirectory>${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/vertxbus/amd/webroot</workingDirectory>
+              <workingDirectory>
+                ${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/vertxbus/amd/webroot
+              </workingDirectory>
               <arguments>install</arguments>
+              <installDirectory>${project.build.directory}</installDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>install-npm-react</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <workingDirectory>
+                ${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/react
+              </workingDirectory>
+              <arguments>install</arguments>
+              <installDirectory>${project.build.directory}</installDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>webpack build</id>
+            <goals>
+              <goal>webpack</goal>
+            </goals>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <workingDirectory>
+                ${project.build.directory}/it/web-examples/src/main/java/io/vertx/example/web/react
+              </workingDirectory>
+              <arguments>-p</arguments>
               <installDirectory>${project.build.directory}</installDirectory>
             </configuration>
           </execution>
@@ -185,7 +215,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-invoker-plugin</artifactId>
-        <version>1.10</version>
+        <version>2.0.0</version>
         <executions>
           <execution>
             <id>build-examples-utils</id>
@@ -230,7 +260,7 @@
       <plugin>
         <groupId>com.github.joelittlejohn.embedmongo</groupId>
         <artifactId>embedmongo-maven-plugin</artifactId>
-        <version>0.1.12</version>
+        <version>0.3.4</version>
         <executions>
           <execution>
             <id>start</id>
