--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     <module>vertx-maven-service-factory-examples-it</module>
     <module>vertx-mail-examples-it</module>
     <module>vertx-heroku-examples-it</module>
+    <module>vertx-jgroups-examples-it</module>
+    <module>vertx-ignite-examples-it</module>
   </modules>
 
   <dependencies>
