--- a/vertx-core-examples-it/pom.xml
+++ b/vertx-core-examples-it/pom.xml
@@ -17,6 +17,17 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/it</directory>
+        <includes>
+          <include>**/*.json</include>
+          <include>**/*-check.groovy</include>
+        </includes>
+        <filtering>true</filtering>
+        <targetPath>${project.build.directory}/it</targetPath>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>io.vertx</groupId>
