--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>integration-tests</artifactId>
-  <version>3.3.0-SNAPSHOT</version>
+  <version>3.3.0</version>
 
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.3.0-SNAPSHOT</vertx.version>
-    <vertx.examples.branch>3.3.0-SNAPSHOT</vertx.examples.branch>
+    <vertx.version>3.3.0.CR1</vertx.version>
+    <vertx.examples.branch>3.3.0.CR1</vertx.examples.branch>
   </properties>
 
   <modules>
@@ -114,14 +114,24 @@
   </build>
 
   <repositories>
+    <!--<repository>-->
+      <!--<id>oss.snapshots</id>-->
+      <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
+      <!--<snapshots>-->
+        <!--<enabled>true</enabled>-->
+      <!--</snapshots>-->
+      <!--<releases>-->
+        <!--<enabled>false</enabled>-->
+      <!--</releases>-->
+    <!--</repository>-->
     <repository>
       <id>oss.snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://oss.sonatype.org/content/repositories/iovertx-2911</url>
       <snapshots>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
       </snapshots>
       <releases>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </releases>
     </repository>
   </repositories>
