--- a/vertx-service-proxy-examples-it/pom.xml
+++ b/vertx-service-proxy-examples-it/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <example.dir>service-proxy-examples</example.dir>
     <fastbuild>false</fastbuild>
-    <jar.version>${project.version}</jar.version>
+    <jar.version>3.3.0.CR1</jar.version>
   </properties>
 
   <build>
@@ -75,7 +75,7 @@
               <additionalProperties>
                 <base>${project.build.directory}/it/${example.dir}</base>
                 <dependencies>${project.build.directory}/dependencies</dependencies>
-                <version>${project.version}</version>
+                <version>${jar.version}</version>
                 <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
               </additionalProperties>
             </configuration>
