--- a/vertx-spring-examples-it/pom.xml
+++ b/vertx-spring-examples-it/pom.xml
@@ -14,7 +14,7 @@
 
   <properties>
     <fastbuild>false</fastbuild>
-    <jar.version>${project.version}</jar.version>
+    <jar.version>3.3.0.CR1</jar.version>
   </properties>
 
   <build>
@@ -59,7 +59,7 @@
                 <base>${project.build.directory}/it</base>
                 <dependencies>${project.build.directory}/dependencies</dependencies>
                 <version>${project.version}</version>
-                <jar.version>${project.version}</jar.version>
+                <jar.version>${jar.version}</jar.version>
               </additionalProperties>
             </configuration>
           </execution>
