--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>integration-tests</artifactId>
-  <version>3.3.3</version>
+  <version>3.4.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.3.3</vertx.version>
-    <vertx.examples.branch>vertx-3.3.3</vertx.examples.branch>
+    <vertx.version>3.4.0-SNAPSHOT</vertx.version>
+    <vertx.examples.branch>3.4.0-SNAPSHOT</vertx.examples.branch>
   </properties>
 
   <modules>
@@ -127,7 +127,7 @@
     <!--</repository>-->
     <repository>
       <id>oss.snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/iovertx-3295</url>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
