--- a/vertx-ignite-examples-it/pom.xml
+++ b/vertx-ignite-examples-it/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.3.3</version>
+    <version>3.4.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>vertx-ignite-examples-it</artifactId>
@@ -15,7 +15,7 @@
   <properties>
     <example.dir>ignite-examples</example.dir>
     <fastbuild>false</fastbuild>
-    <jar.version>3.3.3</jar.version>
+    <jar.version>3.4.0-SNAPSHOT</jar.version>
   </properties>
 
   <build>
@@ -35,7 +35,7 @@
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.3.3</version>
+        <version>3.4.0-SNAPSHOT</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
